Fix footer on smaller screens

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -121,7 +121,7 @@ margin: 0 0;
 padding: 0 0;
 transition: 300ms all;
 position: relative;
-padding-bottom: 20px;
+padding-bottom: 40px;
 min-height: 100%;
 }
 
